small spacing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ body {
     padding: 0;
     margin: 0;
     line-height: 1.5em;
-    background-color: rgba(185, 204, 222, 0.03);
+    background-color: #FBFBFC;
 }
 
 img {
